--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "^0.2.0",
     "@coreui/react": "^2.0.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.7.2",
     "classnames": "^2.2.5",
@@ -27,6 +28,9 @@
     "jquery": "^2.2.4",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
+    "react-bootstrap-table-next": "^0.1.14",
+    "react-bootstrap-table2-filter": "^0.3.0",
+    "react-bootstrap-table2-paginator": "^0.1.5",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.3.2",
     "react-loadable": "^5.4.0",
