--- a/package.json
+++ b/package.json
@@ -28,14 +28,12 @@
     "jquery": "^2.2.4",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
-    "react-bootstrap-table-next": "^0.1.14",
-    "react-bootstrap-table2-filter": "^0.3.0",
-    "react-bootstrap-table2-paginator": "^0.1.5",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.3.2",
     "react-loadable": "^5.4.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
+    "react-select": "^2.0.0-beta.7",
     "react-test-renderer": "^16.3.2",
     "reactstrap": "^6.0.1",
     "simple-line-icons": "^2.4.1"
