--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "flag-icon-css": "^3.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^2.2.4",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-chartjs-2": "^2.7.2",
