--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-chartjs-2": "^2.7.2",
+    "react-delay-input": "^4.0.4",
     "react-dom": "^16.3.2",
     "react-loadable": "^5.4.0",
     "react-router-config": "^1.0.0-beta.4",
